--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,13 @@ dialog.modal {
 body {
   scroll-behavior: smooth;
 }
+
+.filter-scrollbar::-webkit-scrollbar {
+  background-color: #00000030;
+  width: 0.5em !important;
+}
+
+.filter-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(100, 25, 230, 0.564);
+  border-radius: 15px;
+}
